# maching_cv_and_vacancy

./: .gitignore  README.md  pyproject.toml  read_data.ipynb
notebooks/: clean_data_from_html_tags.ipynb  dataset_preparation.ipynb
src/models/: create_faiss_db_for_resumes.py  create_faiss_db_for_vacancies.py  faiss_utils.py  get_15_resume_for_vacancy.py  get_cvs_for_vacancy.py  get_embeding_from_lm.py  get_vacancies_for_cv.py
src/streamlit_app/: homepage.py
src/streamlit_app/pages/: 1_match_vacancies_for_resume.py  2_match_resumes_for_vacancy.py
